rust: improve crate metadata

--- a/rust/fatcat-openapi/Cargo.toml
+++ b/rust/fatcat-openapi/Cargo.toml
@@ -2,7 +2,9 @@
 name = "fatcat-openapi"
 version = "0.3.1"
 authors = ["Bryan Newbold <bnewbold@archive.org>"]
-description = "HTTP API models, endpoints, and other auto-generated types"
+description = "Fatcat is an editable bibliographic database. This OpenAPI code-generated crate container HTTP API models, endpoints, and other auto-generated types useful for both client and server implementations of the catalog API."
+homepage = "https://fatcat.wiki"
+repository = "https://github.com/internetarchive/fatcat"
 license = "CC-0"
 
 [features]
