--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.3.1"
 edition = "2018"
 authors = ["Bryan Newbold <bnewbold@archive.org>"]
 description = "A scalable, versioned, API-oriented catalog for bibliographic entities and file metadata"
+homepage = "https://fatcat.wiki"
+repository = "https://github.com/internetarchive/fatcat"
 license = "AGPL 3.0"
 
 [workspace]
