add pytest-mock helper library to dev deps

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -16,6 +16,7 @@ responses = ">=0.10"
 pytest-cov = "*"
 pylint = "*"
 pg-view = "*"
+pytest-mock = "*"
 
 [packages]
 fatcat-openapi-client = {path = "./../python_openapi_client"}
