--- a/python/Pipfile
+++ b/python/Pipfile
@@ -45,6 +45,8 @@ bs4 = "*"
 python-magic = "*"
 pylatexenc = "*"
 pygal = "*"
+elasticsearch-dsl = ">=6.0.0,<7.0.0"
+elasticsearch = ">=6.0.0,<7.0.0"
 
 [requires]
 # Python 3.5 is the bundled (system) version of python for Ubuntu 16.04
