more auth token vars in example.env
As a form of documentation

--- a/python/example.env
+++ b/python/example.env
@@ -18,3 +18,9 @@ FATCAT_AUTH_WORKER_CROSSREF=""
 FATCAT_AUTH_WORKER_ORCID=""
 FATCAT_AUTH_WORKER_PUBMED=""
 FATCAT_AUTH_WORKER_DATACITE=""
+FATCAT_AUTH_WORKER_JALC=""
+FATCAT_AUTH_WORKER_ARXIV=""
+FATCAT_AUTH_WORKER_JSTOR=""
+FATCAT_AUTH_WORKER_JOURNAL_METADATA=""
+FATCAT_AUTH_WORKER_CRAWL=""
+FATCAT_AUTH_WORKER_SAVEPAPERNOW=""
