initial 'Save Paper Now' web form

--- a/python/example.env
+++ b/python/example.env
@@ -6,6 +6,10 @@ FATCAT_API_HOST="http://localhost:9411/v0"
 ELASTICSEARCH_BACKEND="http://localhost:9200"
 ELASTICSEARCH_RELEASE_INDEX="fatcat_release"
 ELASTICSEARCH_CONTAINER_INDEX="fatcat_container"
+# for local dev use:
+#KAFKA_PIXY_ENDPOINT="http://localhost:19092"
+KAFKA_PIXY_ENDPOINT=""
+KAFKA_SAVEPAPERNOW_TOPIC="sandcrawler-dev.ingest-file-requests"
 GITLAB_CLIENT_ID=""
 GITLAB_CLIENT_SECRET=""
 IA_XAUTH_CLIENT_ID=""
