pipenv: update Pipfile and Pipfile.lock
This is still manually tweaked. I believe i've bifurcated the source of
the CSL/citeproc_style import error to upgrade of the 'pytest' module.
This commit upgrades all packages except pytest.

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -39,8 +39,8 @@ sickle = "*"
 python-snappy = "*"
 pymacaroons = "*"
 ftfy = "*"
-citeproc-py = "*"
-citeproc-py-styles = "*"
+citeproc-py = ">=0.4"
+citeproc-py-styles = ">=0.1"
 bs4 = "*"
 python-magic = "*"
 pylatexenc = "*"
