--- a/python/Pipfile
+++ b/python/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
-pytest = ">=4"
+pytest = ">=4,<5.0.0"
 pytest-pythonpath = "*"
 pytest-pylint = "*"
 ipython = "*"
