pipenv: update deps
loginpass patches got accepted upstream a while back, so don't need to
pin to a git version

ipython 7.10 seems to have problems installing, so restricting to
earlier 6.x versions

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -11,7 +11,7 @@ name = "pypi"
 pytest = ">=4,<5.0.0"
 pytest-pythonpath = "*"
 pytest-pylint = "*"
-ipython = "*"
+ipython = "<7.0.0"
 responses = ">=0.10"
 pytest-cov = "*"
 pylint = "*"
@@ -29,7 +29,7 @@ flask-wtf = "*"
 Flask-Misaka = "*"
 flask-mwoauth = "*"
 WTForms = "*"
-loginpass = {ref = 'ed9e527502bd19be6793f88ed71ca0e1764e9034',git = 'https://github.com/authlib/loginpass.git'}
+loginpass = ">=0.4"
 requests = ">=2"
 raven = {extras = ['flask'],version = "*"}
 pykafka = ">=2"
