add pycountry dependency

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -50,6 +50,7 @@ elasticsearch = ">=6.0.0,<7.0.0"
 dateparser = ">=0.7"
 langdetect = "*"
 pathlib2 = "*"
+pycountry = "*"
 
 [requires]
 # Python 3.5 is the bundled (system) version of python for Ubuntu 16.04
