--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -2,10 +2,8 @@
 
 ignore = setup.py
 
-python_paths = .
-
 # search for 'test_*' functions in all python files, not just under tests
-python_files = *.py
+python_files = test_*.py tests/*.py fatcat_tools/*.py fatcat_tools/*/*.py fatcat_web/*.py
 
 addopts = --pylint --pylint-rcfile=.pylintrc --pylint-error-types=EF --pylint-jobs=4
 
