pipenv: add tldextract (url parser) and update deps

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -51,6 +51,7 @@ dateparser = ">=0.7"
 langdetect = "*"
 pathlib2 = "*"
 pycountry = "*"
+tldextract = "*"
 
 [requires]
 # Python 3.5 is the bundled (system) version of python for Ubuntu 16.04
