--- a/python/Pipfile
+++ b/python/Pipfile
@@ -30,6 +30,8 @@ Flask-Misaka = "*"
 flask-mwoauth = "*"
 WTForms = "*"
 loginpass = ">=0.4"
+# loginpass 0.4 is not actually compatible with newer authlib
+authlib = "<0.13"
 requests = ">=2"
 raven = {extras = ['flask'],version = "*"}
 pykafka = ">=2"
