--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   PIPENV_VENV_IN_PROJECT: "true"
   CARGO_HOME: ".cargo_cache"
 
-image: "rust:1.36-stretch"
+image: "rust:1.42-buster"
 
 unified_test:
   variables:
@@ -28,7 +28,7 @@ unified_test:
   before_script:
     - export PATH="$PATH:$CARGO_HOME/bin"
     - apt update -qy
-    - apt install -y python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest libsnappy-dev libsodium-dev
+    - apt install -y python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest libsnappy-dev libsodium-dev software-properties-common python3.7 python3.7-dev python3.7-venv python3.7-distutils
     - cargo install diesel_cli --version 1.3.1
     - pip3 install pipenv
     - pipenv --version
