--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -12,5 +12,7 @@ filterwarnings =
     ignore:.*common_exception_handling.*StopIteration:PendingDeprecationWarning
     ignore:passing extensions and flags as constants is deprecated:DeprecationWarning
     ignore:.*authlib.specs.*:authlib.deprecate.AuthlibDeprecationWarning
+    ignore:Using or importing the ABCs.*:DeprecationWarning
+    ignore:direct construction of PyLintItem.*:_pytest.warning_types.PytestDeprecationWarning
 
 log_level = INFO
