--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ unified_test:
     - export PATH="$PATH:$CARGO_HOME/bin"
     - apt update -qy
     - apt install -y python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest libsnappy-dev libsodium-dev software-properties-common python3.7 python3.7-dev python3.7-venv python3.7-distutils libpq-dev
-    - cargo install diesel_cli --version 1.3.1
+    - cargo install diesel_cli --version 1.3.1 --no-default-features --features postgres
     - pip3 install pipenv
     - pipenv --version
   script:
