--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -13,8 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@master
+      - uses: dschep/install-pipenv-action@master
       # with:
       #   python-version: ${{ matrix.python-version }}
+      - run: pip install --upgrade pip
       - run: pip install black codespell flake8 isort pytest reorder-python-imports
       - run: black --check . || true
       # - run: black --diff . || true
@@ -28,4 +30,6 @@ jobs:
       - run: isort --recursive . || true
       - run: reorder-python-imports . || true
       - run: pip install -r requirements.txt || true
-      - run: pytest . || true
+      # - run: pytest . || true
+      - run: pipenv run pytest --cov
+      - run: pipenv run ./tests/cli.sh
