--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -32,5 +32,5 @@ jobs:
       - run: pip install -r requirements.txt || true
       - run: cd python
       # - run: pytest . || true
-      - run: pipenv run pytest --cov
+      - run: pipenv run pytest  # --cov
       - run: pipenv run ./tests/cli.sh
