pylintrc: skip many spurious WTForm no-member errors

--- a/python/.pylintrc
+++ b/python/.pylintrc
@@ -12,3 +12,5 @@ notes=FIXME,XXX,DELETEME
 
 [TYPECHECK]
 ignored-modules=responses
+# FileEntityForm' has no 'data' member (no-member) (etc)
+generated-members=data,errors
