--- a/python/Pipfile
+++ b/python/Pipfile
@@ -30,7 +30,7 @@ flask-wtf = "*"
 Flask-Misaka = "*"
 flask-mwoauth = "*"
 WTForms = "*"
-loginpass = ">=0.4"
+loginpass = "==0.4"
 # loginpass 0.4 is not actually compatible with newer authlib
 authlib = "<0.13"
 requests = ">=2"
