--- a/python/Pipfile
+++ b/python/Pipfile
@@ -53,7 +53,7 @@ elasticsearch = ">=6.0.0,<7.0.0"
 dateparser = ">=0.7"
 langdetect = "*"
 pathlib2 = "*"
-pycountry = "*"
+pycountry = "==19.8.18"
 tldextract = "*"
 toml = ">=0.10"
 
