cargo: update sentry to fix memory initialization issue
Older sentry had an unsafe memory initialization error, which wasn't
caught by older compilers. Rust 1.48 catches the problem at runtime and
raises a panic. This meant that new builds (eg, on QA machine after
update) were panic-ing.

Newest versions of sentry have modern dependencies, which breaks our
crufty old 'iron' dependency tree. Work-around is to only partially
update (v0.12 to v0.15).

This is a fairly frustrating situation. I'm hopeful that when we update
to a different web framework and openapi generator 5.0 (not yet
released), many of these dependency issues will be resolved, but i'm not
certain. I did notice that if we entirely remove Sentry, which has not
really been used much (only a small handful of issues reported over
several years), we might be able to resolve openssl dependency issues.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -44,7 +44,7 @@ serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_ignored = "0.0.4"
-sentry = { version = "^0.12", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_failure"] }
+sentry = { version = "0.15", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_failure", "with_default_transport" ] }
 cadence = "^0.16"
 
 # Command-line tools
