--- a/extra/docker/Dockerfile.test-base
+++ b/extra/docker/Dockerfile.test-base
@@ -18,7 +18,12 @@ RUN set -eux; \
 # APT dependencies
 RUN set -eux; \
     apt update -qy; \
-    apt install -y python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest libsnappy-dev libsodium-dev software-properties-common python3.7 python3.7-dev python3.7-venv python3.7-distutils wget libpq-dev pkg-config python3-pytest git
+    apt install -y \
+        software-properties-common wget pkg-config git \
+        libpq-dev libsnappy-dev libsodium-dev software-properties-common \
+        python3.7 python3.7-dev python3.7-venv python3.7-distutils \
+        python3.8 python3.8-dev python3.8-venv python3.8-distutils \
+        python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest
 
 # Rust setup from docker-rust debian Dockerfile
 RUN set -eux; \
