--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   PIPENV_VENV_IN_PROJECT: "true"
   CARGO_HOME: ".cargo_cache"
 
-image: "bnewbold/fatcat-test-base:xenial"
+image: "bnewbold/fatcat-test-base:focal"
 
 unified_test:
   variables:
@@ -32,11 +32,10 @@ unified_test:
         apt install -y
         software-properties-common wget pkg-config git
         libpq-dev libsnappy-dev libsodium-dev
-        python3.7 python3.7-dev python3.7-venv python3.7-distutils
+        rustc cargo
         python3.8 python3.8-dev python3.8-venv python3.8-distutils
-        python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest
+        python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest pipenv
     - diesel --version || cargo install diesel_cli --version 1.3.1 --no-default-features --features postgres
-    - pipenv --version || python3.5 -m pip install pipenv
     - pipenv --version
   script:
     - rustc --version && cargo --version && diesel --version
@@ -71,6 +70,7 @@ rust_build_release:
         apt install -y
         software-properties-common wget pkg-config git
         libpq-dev libsnappy-dev libsodium-dev
+        rustc cargo
         python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest
   script:
     - rustc --version && cargo --version
@@ -90,10 +90,9 @@ python_build_release:
         apt install -y
         software-properties-common wget pkg-config git
         libpq-dev libsnappy-dev libsodium-dev
-        python3.7 python3.7-dev python3.7-venv python3.7-distutils
+        rustc cargo
         python3.8 python3.8-dev python3.8-venv python3.8-distutils
-        python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest
-    - pip3 install pipenv
+        python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest pipenv
   script:
     - python3 --version
     - pipenv --version
