Revert "gitlab CI: explicitly use xenial tag of image"
This reverts commit dbfc6e9bacaab4960e814192d66eefea87ef8930.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   PIPENV_VENV_IN_PROJECT: "true"
   CARGO_HOME: ".cargo_cache"
 
-image: "bnewbold/fatcat-test-base:xenial"
+image: "bnewbold/fatcat-test-base:latest"
 
 unified_test:
   variables:
