--- a/extra/docker/Dockerfile.test-base
+++ b/extra/docker/Dockerfile.test-base
@@ -19,8 +19,8 @@ RUN set -eux; \
 RUN set -eux; \
     apt update -qy; \
     apt install -y \
-        software-properties-common wget pkg-config git \
-        libpq-dev libsnappy-dev libsodium-dev software-properties-common \
+        software-properties-common wget curl pkg-config git \
+        libpq-dev libsnappy-dev libsodium-dev \
         python3.7 python3.7-dev python3.7-venv python3.7-distutils \
         python3.8 python3.8-dev python3.8-venv python3.8-distutils \
         python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest
@@ -45,8 +45,9 @@ RUN set -eux; \
     cargo install diesel_cli --version 1.3.1 --no-default-features --features postgres; \
     diesel --version
 
-# Install pipenv
+# Install pipenv using aggressive 'get-pipenv.py' script
+# this will clobber distro installation of, eg, 'pip'
+# original command: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python3; \
 RUN set -eux; \
-    pip3 install pipenv; \
+    curl -L https://archive.org/download/pipenv-mirror/get-pipenv.2020-12-22.py | python3; \
     pipenv --version
-
