web: add goatcounter analytics
Same setup as scholar.archive.org

--- a/python/example.env
+++ b/python/example.env
@@ -15,6 +15,7 @@ GITLAB_CLIENT_SECRET=""
 IA_XAUTH_CLIENT_ID=""
 IA_XAUTH_CLIENT_SECRET=""
 SENTRY_DSN=""
+ENABLE_GOATCOUNTER=""
 
 # These auth keys only for workers/importers; locally will fall back to
 # FATCAT_API_AUTH_TOKEN
