fix 'colected' typos
Thanks for the catch martin

--- a/extra/collectd_statsd.conf
+++ b/extra/collectd_statsd.conf
@@ -4,7 +4,7 @@
 # eg, kcollectd, which is helpful for basic debugging of metrics.
 #
 # To use, copy this file to, eg: /etc/collectd/collectd.conf.d/fatcat_statsd.conf
-# then restart colectd: sudo service collectd restart
+# then restart collectd: sudo service collectd restart
 
 LoadPlugin statsd
 
