default ingest request topic now '-daily'; configurable for ingest_tool.py

--- a/python/example.env
+++ b/python/example.env
@@ -9,7 +9,7 @@ ELASTICSEARCH_CONTAINER_INDEX="fatcat_container"
 # for local dev use:
 #KAFKA_PIXY_ENDPOINT="http://localhost:19092"
 KAFKA_PIXY_ENDPOINT=""
-KAFKA_SAVEPAPERNOW_TOPIC="sandcrawler-dev.ingest-file-requests"
+KAFKA_SAVEPAPERNOW_TOPIC="sandcrawler-dev.ingest-file-requests-priority"
 GITLAB_CLIENT_ID=""
 GITLAB_CLIENT_SECRET=""
 IA_XAUTH_CLIENT_ID=""
