--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -14,5 +14,7 @@ filterwarnings =
     ignore:.*authlib.specs.*:authlib.deprecate.AuthlibDeprecationWarning
     ignore:Using or importing the ABCs.*:DeprecationWarning
     ignore:direct construction of PyLintItem.*:_pytest.warning_types.PytestDeprecationWarning
+    ignore:.*pytz-deprecation-shim
+    ignore:.*removed in Jinja 3:DeprecationWarning
 
 log_level = INFO
