--- a/rust/example.env
+++ b/rust/example.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://fatcat:tactaf@localhost/fatcat
+DATABASE_URL=postgres://fatcat:tactaf@localhost/fatcat_dev
 TEST_DATABASE_URL=postgres://fatcat:tactaf@localhost/fatcat_test
 AUTH_LOCATION="dev.fatcat.wiki"
 AUTH_KEY_IDENT="20190101-dev-dummy-key"
