--- a/rust/Makefile
+++ b/rust/Makefile
@@ -9,8 +9,24 @@ help: ## Print info about all commands
 	@grep -E '^[a-zA-Z0-9_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "    \033[01;32m%-20s\033[0m %s\n", $$1, $$2}'
 
 .PHONY: test
-test: ## Run all tests and lints
+test: ## Run all tests
 	cargo test -- --test-threads 1
+
+.PHONY: lint
+lint: ## Run syntax/style checks
+	cargo clippy -- --no-deps
+
+.PHONY: fmt
+fmt: ## Run syntax re-formatting
+	cargo fmt
+
+.PHONY: build
+build: ## Build
+	cargo build
+
+.PHONY: build-release
+build-release: ## Build for release
+	cargo build --release
 
 .PHONY: serve
 serve: ## Run web service locally, with reloading
